@@ -13,26 +13,25 @@ function advise_menu() {
     "page_settings" => array (
       "display_currently_advising" => TRUE,
       "display_greeting" => TRUE,
+      "page_has_search" => TRUE,
     ),    
     "weight" => 30,
     "type" => MENU_TYPE_TAB,
   );
 
-
-  $items["history"] = array(
-    "title" => "History",
-    "page_callback" => "advise_display_history",
+  $items["view/print"] = array(
+    "title" => "View",
+    "page_callback" => "advise_display_view",
+    "page_arguments" => array("view"),
     "access_callback" => TRUE,  
-    "tab_family" => "system",
     "page_settings" => array (
       "display_currently_advising" => TRUE,
-      "display_greeting" => TRUE,
+      "bool_print" => TRUE,
+      "screen_mode" => "not_advising",
     ),    
-    "weight" => 40,
-    "type" => MENU_TYPE_TAB,
-    "file" => menu_get_module_path("advise") . "/advise.history.inc",
+    "type" => MENU_TYPE_CALLBACK,
   );
-
+  
 
 
   $items["what-if"] = array(
@@ -44,10 +43,44 @@ function advise_menu() {
     "page_settings" => array (
       "display_currently_advising" => TRUE,
       "display_greeting" => TRUE,
+      "page_has_search" => TRUE,      
     ),    
     "weight" => 60,
     "type" => MENU_TYPE_TAB,
   );
+
+  
+  $items["what-if/print"] = array(
+    "title" => "What If?",
+    "page_callback" => "advise_display_view",
+    "page_arguments" => array("what-if"),
+    "access_callback" => TRUE,  
+    "page_settings" => array (
+      "display_currently_advising" => TRUE,
+      "bool_print" => TRUE,
+      "screen_mode" => "not_advising",
+    ),    
+    "type" => MENU_TYPE_CALLBACK,
+  );
+
+
+
+
+  $items["history"] = array(
+    "title" => "History",
+    "page_callback" => "advise_display_history",
+    "access_callback" => TRUE,  
+    "tab_family" => "system",
+    "page_settings" => array (
+      "display_currently_advising" => TRUE,
+      "display_greeting" => TRUE,
+      "page_has_search" => TRUE,      
+    ),    
+    "weight" => 40,
+    "type" => MENU_TYPE_TAB,
+    "file" => menu_get_module_path("advise") . "/advise.history.inc",
+  );
+
 
 
   
@@ -66,7 +99,6 @@ function advise_menu() {
     "page_callback" => "advise_popup_display_summary",
     "access_callback" => "advise_user_can_view_advising_session_access_callback",
     "page_settings" => array(
-      "page_has_search" => FALSE,
       "page_is_popup" => TRUE,
       "page_hide_report_error" => TRUE,
       "bool_print" => TRUE,
@@ -627,13 +659,13 @@ function advise_display_view($view = "view") {
   advise_init_screen();      
   fp_add_js(fp_get_module_path("advise") . "/js/advise.js");  
 
-  if ($GLOBALS["fp_advising"]["print_view"] == "yes") {
-    $screen->bool_print = true;
+  // If we are on a print screen, we need to go out of our
+  // way to set the screen mode, so we don't display certain things
+  // when we go to draw the screen.
+  if (strstr($_REQUEST["q"], "/print")) {
+    $screen->bool_print = TRUE;
     $screen->screen_mode = "not_advising";
-    $log_extra .= ",print_view";
   }
-
-  //$page_content .= $screen->display_greeting();
 
   if ($GLOBALS["fp_advising"]["advising_what_if"] == "yes" && $GLOBALS["fp_advising"]["what_if_major_code"] == "") {
     // We are in WhatIf, but we have not selected a major, so give
@@ -666,6 +698,12 @@ function advise_display_view($view = "view") {
     $tab_array[1]["title"] = "Display by Type";
     $tab_array[1]["active"] = ($screen->view == "type");
     $tab_array[1]["on_click"] = "changeView(\"type\");";
+        
+    $tab_array[2]["title"] = "Print";
+    $tab_array[2]["type"] = "link";    
+    $tab_array[2]["active"] = FALSE;
+    $tab_array[2]["on_click"] = "popupPrintWindow(\"" . base_path() . "/$view/print&advising_view=$screen->view\");";
+        
         
     fp_set_page_sub_tabs($tab_array);
     
